deploy/cilium/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-allow-frontend"
  namespace: demo
spec:
  description: "Hanya izinkan trafik HTTP dari frontend ke backend-api. Malicious client akan diblokir."
  endpointSelector:
    matchLabels:
      app: backend-api
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
